--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
-<html>
-<head></head>
-<body>
-    <h1>Hello World!!!</h1>
-</body>
-</html>
+<html lang="ru"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<title>ChubiNinja</title>
+<style>
+			html, body {
+				height: 100%;
+				margin: 0;
+				padding: 0;
+			}
 
+			body {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				background-color: #9400d3;
+			}
+			.logo {
+				filter: invert(100%);
+			}
+		</style>
+</head>
+<body>
+<img class="logo" src="./ninja.png">
+
+
+</body></html>
